--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asadbek Umirzakov</title>
 </head>
-<body style="background-color:floralwhite ;">
+<body bgcolor="#6C8CD5" ;">
   <img 
-  src="https://www.google.com/search?q=humo+hk&rlz=1C1GCEA_enUZ805UZ805&sxsrf=AOaemvK03TJhqP6_-n4o_kRCDyePL-bgHA:1637518453894&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiH-4bOh6r0AhXpxIsKHQF2ABUQ_AUoAXoECAEQAw&biw=1528&bih=917&dpr=1#imgrc=Mwn5IKosypurnM" 
-  alt="Asadbek Umirzakov">
-  width="200"
-  height="200"
-  />
+  src="https://static-cse.canva.com/blob/194414/photo-1502082553048-f009c37129b9-e1583341920812.jpeg" 
+  alt="Asadbek Umirzakov"width="100"heighr="100">
   <h1>Asadbek Umirzakov</h1>
   <p>Python va C++ bo'yicha dasturchi</p>
   <p>"Fullstack veb dasturlash" kurchi o'qituvchisi</p>
